[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Application.gd" type="Script" id=1]
[ext_resource path="res://scenes/GraphEditor.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/MenuBar.gd" type="Script" id=3]
[ext_resource path="res://scripts/Exporter.gd" type="Script" id=4]
[ext_resource path="res://scripts/Dialogs.gd" type="Script" id=5]
[ext_resource path="res://scripts/NewEditor.gd" type="Script" id=6]

[node name="Application" type="Node"]
script = ExtResource( 1 )
NodeEditor = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MenuBar" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0
script = ExtResource( 3 )

[node name="FileButton" type="MenuButton" parent="VBoxContainer/MenuBar"]
margin_right = 35.0
margin_bottom = 20.0
text = "File"

[node name="Content" type="TabContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
tab_align = 0
drag_to_rearrange_enabled = true

[node name="Exporter" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Dialogs" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Save" type="FileDialog" parent="Dialogs"]
margin_right = 360.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
resizable = true
access = 2
current_dir = "/home/jacko/Development/game/godot/NodeGraphEditor"
current_path = "/home/jacko/Development/game/godot/NodeGraphEditor/"

[node name="Load" type="FileDialog" parent="Dialogs"]
margin_right = 360.0
margin_bottom = 130.0
rect_min_size = Vector2( 200, 200 )
window_title = "Datei Ã¶ffnen"
resizable = true
mode = 0
access = 2
current_dir = "/home/jacko/Development/game/godot/NodeGraphEditor"
current_path = "/home/jacko/Development/game/godot/NodeGraphEditor/"

[node name="Export" type="FileDialog" parent="Dialogs"]
margin_right = 360.0
margin_bottom = 130.0
rect_min_size = Vector2( 200, 200 )
resizable = true
access = 2
current_dir = "/home/jacko/Development/game/godot/NodeGraphEditor"
current_path = "/home/jacko/Development/game/godot/NodeGraphEditor/"

[node name="NewEditor" type="ConfirmationDialog" parent="Dialogs"]
editor/display_folded = true
margin_right = 200.0
margin_bottom = 70.0
rect_min_size = Vector2( 300, 70 )
script = ExtResource( 6 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Dialogs/NewEditor"]
editor/display_folded = true
margin_left = 8.0
margin_top = 8.0
margin_right = 292.0
margin_bottom = 34.0
size_flags_horizontal = 3
alignment = 1

[node name="label" type="Label" parent="Dialogs/NewEditor/HBoxContainer2"]
margin_left = 19.0
margin_top = 6.0
margin_right = 60.0
margin_bottom = 20.0
text = "Nodes"

[node name="node_types" type="OptionButton" parent="Dialogs/NewEditor/HBoxContainer2"]
margin_left = 64.0
margin_right = 264.0
margin_bottom = 26.0
rect_min_size = Vector2( 200, 0 )

[node name="NoFileSpecified" type="AcceptDialog" parent="Dialogs"]
editor/display_folded = true
margin_right = 200.0
margin_bottom = 60.0

[node name="Label2" type="Label" parent="Dialogs/NoFileSpecified"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -92.0
margin_top = 8.0
margin_right = 92.0
margin_bottom = 24.0
text = "You must specify a file name"
align = 1
valign = 1

[connection signal="close_all_tabs_pressed" from="VBoxContainer/MenuBar" to="." method="_on_MenuBar_close_all_tabs_pressed"]
[connection signal="close_current_tab_pressed" from="VBoxContainer/MenuBar" to="." method="_on_MenuBar_close_current_tab_pressed"]
[connection signal="export_pressed" from="VBoxContainer/MenuBar" to="." method="_on_MenuBar_export_pressed"]
[connection signal="load_pressed" from="VBoxContainer/MenuBar" to="." method="_on_MenuBar_load_pressed"]
[connection signal="new_pressed" from="VBoxContainer/MenuBar" to="." method="_on_MenuBar_new_pressed"]
[connection signal="quit_pressed" from="VBoxContainer/MenuBar" to="." method="_on_MenuBar_quit_pressed"]
[connection signal="save_pressed" from="VBoxContainer/MenuBar" to="." method="_on_MenuBar_save_pressed"]
[connection signal="export_editor" from="Dialogs" to="." method="_on_Dialogs_export_editor"]
[connection signal="load_editor" from="Dialogs" to="." method="_on_Dialogs_load_editor"]
[connection signal="open_new_editor" from="Dialogs" to="." method="_on_Dialogs_open_new_editor"]
[connection signal="save_editor" from="Dialogs" to="." method="_on_Dialogs_save_editor"]
[connection signal="file_selected" from="Dialogs/Save" to="Dialogs" method="_on_Save_file_selected"]
[connection signal="file_selected" from="Dialogs/Load" to="Dialogs" method="_on_Load_file_selected"]
[connection signal="file_selected" from="Dialogs/Export" to="Dialogs" method="_on_Export_file_selected"]
[connection signal="about_to_show" from="Dialogs/NewEditor" to="Dialogs/NewEditor" method="_on_NewEditor_about_to_show"]
[connection signal="confirmed" from="Dialogs/NewEditor" to="Dialogs" method="_on_NewEditor_confirmed"]
